@@ -5,9 +5,11 @@ sourceforge (2.6-0+14+) experimental; urgency=low
   * [Christian] Included full Spanish translation from Vicente Ruiz.  Thanks
     again
   * [Christian] Removed the unused categories column in
-    www/admin/grouplist.php 
+    www/admin/grouplist.php
+  * [Christian] Added stats_getprojects_active_public function in
+    www/include/features_boxes.php 
 
- -- Christian Bayle <bayle@debian.org>  Tue, 26 Nov 2002 00:18:01 +0100
+ -- Christian Bayle <bayle@debian.org>  Tue, 26 Nov 2002 00:23:43 +0100
 
 sourceforge (2.6-0+14) experimental; urgency=low
 
